# pdfer

./: .gitignore  PDFer-Architecture-Patch-v2.md  README.md  USER-GUIDE.md  pdf_pipeline_problem_map.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  ws.py
backend/app/models/: schemas.py
backend/app/routers/: documents.py  training.py
backend/app/services/: assemble.py  describe.py  detect.py  edit.py  extract.py  gemma.py  ingest.py  model_manager.py  reliability.py
backend/tests/: conftest.py  test_smoke.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: DocumentDetail.tsx  DocumentList.tsx  ObjectInspector.tsx  PageCanvas.tsx  PageList.tsx  QueueView.tsx  ReviewCanvas.tsx  UploadForm.tsx  Workspace.tsx
frontend/src/design/: effects.css  index.ts  tokens.css
frontend/src/design/primitives/: Button.module.css  Button.tsx  GlowWrap.module.css  GlowWrap.tsx  Panel.module.css  Panel.tsx  StageNode.module.css  StageNode.tsx  StatusPill.module.css  StatusPill.tsx
frontend/src/hooks/: useDocumentEvents.ts  useKeyboardShortcuts.ts  useObjectEdits.ts
frontend/src/pages/: NotFound.module.css  NotFound.tsx
frontend/src/screens/Dashboard/: CorpusStatus.tsx  Dashboard.module.css  Dashboard.tsx  FileRow.module.css  FileRow.tsx  ModelStatus.module.css  ModelStatus.tsx  StageCell.module.css  StageCell.tsx  Upload.module.css  Upload.tsx  stageMapping.ts
frontend/src/store/: reviewStore.ts
mocks/: dashboard-mock.html  review-mock.html
(+32 files in other folders)
