[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "pdfer"
version = "0.1.0"
description = "Local-first PDF-to-Markdown pipeline with human-in-the-loop review"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.21",
    "pydantic>=2.0",
    "PyMuPDF>=1.25",
    "pdfplumber>=0.11",
    "Pillow>=11.0",
    "python-multipart>=0.0.18",
    "ultralytics>=8.4",
    "scikit-learn>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]
# Gemma 4 E4B-it extraction path. Install with:
#   pip install -e ".[llm]"
# CUDA + bitsandbytes is required for NF4 quantization; CPU-only installs of
# bitsandbytes will fail to load. Without these the Extract (no LLM) button
# still produces a clean document.md from pdfplumber.
llm = [
    "transformers>=4.49",
    "accelerate>=1.2",
    "bitsandbytes>=0.45",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
